Minor correction to README
--- pt-br --------

Pequena correcao no README


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@340 31482026-630c-0410-91bb-adf60aae4351

--- a/README.en
+++ b/README.en
@@ -35,7 +35,7 @@ To get your own Motiro portal up and running, you will need the following:
 1.  MySQL 4.1 (5.x is not yet supported and previous versions weren't tested)
 2.  Ruby 1.8.2 or later
 3.  Rails 1.1.6 or later
-4.  Subversion client (svn) if you are to planning use the Subversion reporter
+4.  Subversion client (svn) if you are planning to use the Subversion reporter
 5.  Darcs client (darcs) if you are planning to use the Darcs reporter
 6.  Xml-Simple 1.0.9 or later (available as Ruby Gem: xml-simple)
 7.  MediaCloth 0.0.2 or later (available as Ruby Gem: mediacloth)
