--- a/README.en
+++ b/README.en
@@ -100,6 +100,15 @@ What you need to do is:
    Finished in 0.056199 seconds.
 
    1 tests, 1 assertions, 0 failures, 0 errors
+   
+   % rake test:contracts
+   (in /home/thiago/devel/motiro)
+   Loaded suite /usr/lib/ruby/gems/1.8/gems/rake-0.7.1/lib/rake/rake_test_loader
+   Started
+   .
+   Finished in 0.200615 seconds.
+
+   1 tests, 1 assertions, 0 failures, 0 errors
    ----------------------------------------------------------------------------
 
    You are likely to get much more dots outputed as well as messages than that,
