Updates README with daemon info for win32
--- pt-br -----------

Atualiza o README com instrucoes para o daemon em win32


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@403 31482026-630c-0410-91bb-adf60aae4351

--- a/README.en
+++ b/README.en
@@ -140,6 +140,12 @@ What you need to do is:
 
    % ruby script/ticker stop
    
+   Under Windows, you'll want to try:
+   
+   % ruby script/ticker run
+   
+   and stop it by hitting Ctrl-C.
+   
 5. Boot the server
 ------
 
