Provides rake gem task for packaging as gem
* Installer is still missing, needs some black magic to run
* Does not provide the pre-generated database
* Probably does not work under Windows because it doesn't declare the dependencies on win32 libraries

--- pt-br --------------

Fornece a tarefa rake gem para empacotar como gem

* Falta o instalador. Roda corretamente mas precisa de um pouco de magia negra
* Nao fornece a base de dados pre-esquematizada
* Provavelmente nao funciona sob Windows pois nao declara as dependencias das bibliotecas win32


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@526 31482026-630c-0410-91bb-adf60aae4351

--- a/README.en
+++ b/README.en
@@ -1,5 +1,5 @@
 Motiro - A project tracking tool
-Copyright (C) 2006  Thiago Arrais
+Copyright (C) 2006, 2007  Thiago Arrais
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -38,7 +38,7 @@ To get your own Motiro portal up and running, you will need the following:
 4.  Darcs client (darcs) if you are planning to use the Darcs reporter
 5.  MediaCloth 0.0.2 or later (available as Ruby Gem: mediacloth)
 6.  Daemons 1.0.4 (available as Ruby Gem: daemons)
-7.  Platform 0.4.0 (available as Ruby Gem: platform)
+7.  Platform 0.4.0 (available as Ruby Gem: Platform)
 8.  Open4 0.9.1 (available as Ruby Gem: open4)
 9.  POpen4 0.1.1 (available as Ruby Gem: POpen4)
 10. SQLite3-Ruby 1.2.1 or later (available as Ruby Gem: sqlite3-ruby)
