--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Motiro - A project tracking tool
-Copyright (C) 2006  Thiago Arrais
+Copyright (C) 2006, 2007  Thiago Arrais
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -15,7 +15,7 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 --------------------------------------------------------------------------------
-Motiro version 0.6.2 - February 2007
+Motiro version 0.6.3 - March 2007
 
 Please refer to your preferred language README. Every text file below this
 directory is UTF-8 encoded. Please make sure to set up your reader accordingly.
